# BEV

./: .gitignore  .pre-commit-config.yaml  GUIDA_TEORICA.md  LICENSE  Makefile  README.md  inference.py  main.py  notes.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/paths/: default.yaml  mini.yaml  mini_veh.yaml  veh.yaml
docker/: Dockerfile  docker-compose.yml  requirements-core.txt
notebooks/: dataloader.ipynb  emb.ipynb  pipeline.ipynb  pipeline_01.ipynb  pipeline_01_new.ipynb  pipeline_01_visual.ipynb  pipeline_02.ipynb  pipeline_02_visual.ipynb  pipeline_03.ipynb  pipeline_03_grande.ipynb
scripts/: evaluate.py  metrics.py
src/data/: bevqa_dataset.py  build_index.py
src/models/: bev_emb.py  bevqa.py  head.py  mca.py  text_emb.py
src/training/: train.py
src/utils/: text_utils.py
