[project]
name = "bev"
version = "0.1.0"
description = "Multimodal Model for Visual Question Answering and Explainable Autonomous Driving"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8",
    "torchvision",
    "numpy>=1.24",
    "pillow>=10.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pandas>=2.0",
    "wandb",
    "scikit-learn",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
notebooks = [
    "jupyterlab>=4.0",
    "ipywidgets",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bev"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
